@@ -775,6 +775,7 @@ defaultParams = {
     # text props
     'text.color'        : ['k', validate_color],     # black
     'text.usetex'       : [False, validate_usetex],
+    'text.latex.unicode': [False, validate_bool],
     'text.latex.preamble': ['', validate_latex_preamble],
     'text.dvipnghack'    : [False, validate_bool],
     'text.fontstyle'    : ['normal', str],
